--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="deskripsi">Deskripsi</string>
+    <string name="alarm_set">Alarm Set</string>
+    <string name="title_activity_setting">SettingActivity</string>
 </resources>
