--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="deskripsi">Deskripsi</string>
     <string name="alarm_set">Alarm Set</string>
     <string name="title_activity_setting">SettingActivity</string>
+    <string name="data_kosong">Data Empty</string>
 </resources>
